--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,7 +30,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - name: Build Next.js app
-        run: npm run build || exit 1
+        run: npm run build --webpack || exit 1
       - name: Verify build output
         run: |
           ls -la .next || exit 1
