--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,15 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    env:
+      env:
+      COOKIE_SECRET: ${{ secrets.COOKIE_SECRET }}
+      NEXT_PUBLIC_COOKIE_NAME: ${{ secrets.NEXT_PUBLIC_COOKIE_NAME }}
+      NEXT_PUBLIC_GROUP_COOKIE_NAME: ${{ secrets.NEXT_PUBLIC_GROUP_COOKIE_NAME }}
+      NEXT_PUBLIC_ENTITY_COOKIE_NAME: ${{ secrets.NEXT_PUBLIC_ENTITY_COOKIE_NAME }}
+      NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+      NODE_ENV: ${{ secrets.NODE_ENV }}
+      PORT: ${{ secrets.PORT }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -30,7 +39,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - name: Build Next.js app
-        run: npm run build --webpack || exit 1
+        run: npm run build || exit 1
       - name: Verify build output
         run: |
           ls -la .next || exit 1
