--- a/package.json
+++ b/package.json
@@ -42,18 +42,19 @@
     "use-debounce": "^10.0.6",
     "zod": "^4.1.13",
     "zustand": "^5.0.9",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+        "@tailwindcss/postcss": "^4",
+            "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0"
+
+
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.10",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0"
-  }
+    "eslint-config-next": "16.0.10"  }
 }
