--- a/package.json
+++ b/package.json
@@ -45,16 +45,17 @@
     "typescript": "^5.9.3",
         "@tailwindcss/postcss": "^4",
             "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19"
 
 
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@tanstack/react-query-devtools": "^5.91.1",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    
     "eslint": "^9",
     "eslint-config-next": "16.0.10"  }
 }
