--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -125,8 +125,9 @@ jobs:
           script: |
             export PATH=$PATH:/usr/local/bin:/usr/bin:/bin
             [ -s "$HOME/.nvm/nvm.sh" ] && \. "$HOME/.nvm/nvm.sh"
-            mkdir -p /var/www/html/frontend/.next
-            mkdir -p /var/www/html/frontend/public
+            sudo mkdir -p /var/www/html/frontend/.next
+            sudo mkdir -p /var/www/html/frontend/public
+            sudo chown -R ${{ secrets.VPS_USER }}:${{ secrets.VPS_USER }} /var/www/html/frontend
             cd /var/www/html/frontend
             npm install --production || exit 1
             pm2 reload frontend || exit 1
