--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,50 +57,55 @@ jobs:
           echo "NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}" >> build/.env
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> build/.env
           echo "PORT=${{ secrets.PORT }}" >> build/.env
-      - name: Deploy Frontend via SSH
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
+      - name: Rsync frontend to VPS (Blue-Green)
+        run: |
+          # Detect current live port
+          LIVE_PORT=$(ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
+            "curl -s http://127.0.0.1:3800/api/v1/health > /dev/null && echo 3800 || echo 3801")
+
+          if [ "$LIVE_PORT" = "3800" ]; then
+            GREEN_DIR=/var/www/html/frontend-green
+            GREEN_PORT=3801
+            OLD_PORT=3800
+            OLD_NAME=frontend-blue
+            NEW_NAME=frontend-green
+          else
+            GREEN_DIR=/var/www/html/frontend-blue
+            GREEN_PORT=3800
+            OLD_PORT=3801
+            OLD_NAME=frontend-green
+            NEW_NAME=frontend-blue
+          fi
+
+          echo "Deploying $NEW_NAME on port $GREEN_PORT"
+
+          # Create green folder on VPS
+          ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
+            "sudo mkdir -p $GREEN_DIR && sudo chown -R ${{ secrets.VPS_USER }}:${{ secrets.VPS_USER }} $GREEN_DIR"
+
+          # Rsync files from runner to VPS green folder
+          rsync -avz --delete -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/.next/ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/.next/
+          rsync -avz --delete -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/public/ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/public/
+          rsync -avz -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/package.json ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/
+          rsync -avz -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/next.config.ts ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/
+          rsync -avz -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/.env ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/
+
+      - name: Start Green instance & switch Nginx
+        run: |
+          ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             set -e
             export PATH=$PATH:/usr/local/bin:/usr/bin:/bin
 
-            # Detect current live color
-            LIVE_PORT=$(curl -s http://127.0.0.1:3800/api/v1/health > /dev/null 2>&1 && echo 3800 || echo 3801)
-            if [ "$LIVE_PORT" = "3800" ]; then
-              GREEN_DIR=/var/www/html/frontend-green
-              GREEN_PORT=3801
-              OLD_PORT=3800
-              OLD_NAME=frontend-blue
-              NEW_NAME=frontend-green
-            else
-              GREEN_DIR=/var/www/html/frontend-blue
-              GREEN_PORT=3800
-              OLD_PORT=3801
-              OLD_NAME=frontend-green
-              NEW_NAME=frontend-blue
-            fi
-
-            echo "Deploying $NEW_NAME on port $GREEN_PORT"
-
-            sudo mkdir -p $GREEN_DIR
-            sudo chown -R $USER:$USER $GREEN_DIR
-
-            # ✅ Use correct artifact paths
-            rsync -avz --delete build/.next/ $GREEN_DIR/.next/
-            rsync -avz --delete build/public/ $GREEN_DIR/public/
-            rsync -avz build/package.json $GREEN_DIR/
-            rsync -avz build/next.config.ts $GREEN_DIR/
-            rsync -avz build/.env $GREEN_DIR/
-
+            # Navigate to green folder
             cd $GREEN_DIR
+
+            # Install dependencies
             npm install --production
 
+            # Start new PM2 instance
             pm2 start npm --name $NEW_NAME -- start --watch --port $GREEN_PORT || pm2 reload $NEW_NAME
 
-            # Health check
+            # Wait for health check
             for i in {1..10}; do
               curl -s http://127.0.0.1:$GREEN_PORT/api/v1/health | grep '"status":"ok"' && break
               sleep 2
@@ -111,4 +116,5 @@ jobs:
             sudo nginx -t
             sudo systemctl reload nginx
 
-            pm2 stop $OLD_NAME
+            # Stop old instance
+            pm2 stop $OLD_NAME || true
