--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,17 +37,11 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/download-artifact@v4
         with:
           name: frontend-build
           path: build
-      - name: Verify artifact
-        run: |
-          ls -la build/
-          ls -la build/.next/
-          ls -la build/public/
       - name: Create .env
         run: |
           echo "COOKIE_SECRET=${{ secrets.COOKIE_SECRET }}" > build/.env
@@ -62,12 +56,11 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-      - name: Rsync frontend to VPS (Blue-Green)
+      - name: Deploy Blue-Green Frontend
         run: |
-          # Detect current live port
+          # Detect live color on VPS
           LIVE_PORT=$(ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
             "curl -s http://127.0.0.1:3800/api/v1/health > /dev/null && echo 3800 || echo 3801")
-
           if [ "$LIVE_PORT" = "3800" ]; then
             GREEN_DIR=/var/www/html/frontend-green
             GREEN_PORT=3801
@@ -81,45 +74,39 @@ jobs:
             OLD_NAME=frontend-green
             NEW_NAME=frontend-blue
           fi
-
           echo "Deploying $NEW_NAME on port $GREEN_PORT"
-
-          # Create green folder on VPS
-          ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
-            "sudo mkdir -p $GREEN_DIR && sudo chown -R ${{ secrets.VPS_USER }}:${{ secrets.VPS_USER }} $GREEN_DIR"
-
-          # Rsync files from runner to VPS green folder
-          rsync -avz --delete -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/.next/ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/.next/
-          rsync -avz --delete -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/public/ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/public/
+          # Ensure green folder exists and is owned by deploy user
+          ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
+            sudo mkdir -p $GREEN_DIR
+            sudo chown -R ${{ secrets.VPS_USER }}:${{ secrets.VPS_USER }} $GREEN_DIR
+          "
+          # Rsync files to VPS
           rsync -avz -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/package.json ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/
           rsync -avz -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/next.config.ts ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/
           rsync -avz -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/.env ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/
-
-      - name: Start Green instance & switch Nginx
-        run: |
-          ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+          rsync -avz --delete -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/.next/ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/.next/
+          rsync -avz --delete -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no" build/public/ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$GREEN_DIR/public/
+          # Debug: confirm package.json exists
+          ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
+            ls -la $GREEN_DIR
+          "
+          # Start new instance and switch Nginx
+          ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << EOF
             set -e
-            export PATH=$PATH:/usr/local/bin:/usr/bin:/bin
-
-            # Navigate to green folder
+            export NVM_DIR="\$HOME/.nvm"
+            [ -s "\$NVM_DIR/nvm.sh" ] && \. "\$NVM_DIR/nvm.sh"
+            [ -s "\$NVM_DIR/bash_completion" ] && \. "\$NVM_DIR/bash_completion"
+            export PATH=\$PATH:/usr/local/bin:/usr/bin:/bin
             cd $GREEN_DIR
-
-            # Install dependencies
             npm install --production
-
-            # Start new PM2 instance
-            pm2 start npm --name $NEW_NAME -- start --watch --port $GREEN_PORT || pm2 reload $NEW_NAME
-
-            # Wait for health check
+            pm2 start "bash -c 'source ~/.nvm/nvm.sh && cd $GREEN_DIR && PORT=$GREEN_PORT npx next start'" \ --name $NEW_NAME || pm2 restart $NEW_NAME
+            # Health check
             for i in {1..10}; do
               curl -s http://127.0.0.1:$GREEN_PORT/api/v1/health | grep '"status":"ok"' && break
               sleep 2
             done
-
             # Switch Nginx upstream
             sudo sed -i "s/server 127.0.0.1:$OLD_PORT;/server 127.0.0.1:$GREEN_PORT;/" /etc/nginx/sites-available/frontend
             sudo nginx -t
             sudo systemctl reload nginx
-
-            # Stop old instance
             pm2 stop $OLD_NAME || true
