--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -99,7 +99,8 @@ jobs:
             export PATH=\$PATH:/usr/local/bin:/usr/bin:/bin
             cd $GREEN_DIR
             npm install --production
-            pm2 start "bash -c 'source ~/.nvm/nvm.sh && cd $GREEN_DIR && PORT=$GREEN_PORT npx next start'" \ --name $NEW_NAME || pm2 restart $NEW_NAME
+            pm2 restart $NEW_NAME
+            # pm2 start "bash -c 'source ~/.nvm/nvm.sh && cd $GREEN_DIR && PORT=$GREEN_PORT npx next start'" \ --name $NEW_NAME || pm2 restart $NEW_NAME
             # Health check
             for i in {1..10}; do
               curl -s http://127.0.0.1:$GREEN_PORT/api/v1/health | grep '"status":"ok"' && break
