--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -106,8 +106,11 @@ jobs:
               curl -s http://127.0.0.1:$GREEN_PORT/api/v1/health | grep '"status":"ok"' && break
               sleep 2
             done
-            # Switch Nginx upstream
-            sudo sed -i "s/server 127.0.0.1:$OLD_PORT;/server 127.0.0.1:$GREEN_PORT;/" /etc/nginx/sites-available/frontend
+            # Switch Nginx to new port
+            sudo sed -i "s|proxy_pass http://127.0.0.1:$OLD_PORT;|proxy_pass http://127.0.0.1:$GREEN_PORT;|" /etc/nginx/sites-available/frontend
+            echo "NGINX AFTER SWITCH:"
+            sudo grep proxy_pass /etc/nginx/sites-available/frontend
+
             sudo nginx -t
             sudo systemctl reload nginx
             pm2 stop $OLD_NAME || true
