--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tailwindcss/postcss": "^4",
     "@tanstack/react-query": "^5.90.12",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -39,23 +43,17 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
     "use-debounce": "^10.0.6",
     "zod": "^4.1.13",
-    "zustand": "^5.0.9",
-    "typescript": "^5.9.3",
-        "@tailwindcss/postcss": "^4",
-            "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19"
-
-
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@tanstack/react-query-devtools": "^5.91.1",
-    
     "eslint": "^9",
-    "eslint-config-next": "16.0.10"  }
+    "eslint-config-next": "16.0.10"
+  }
 }
