--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "framer-motion": "^12.23.26",
     "jose": "^6.1.3",
     "lucide-react": "^0.561.0",
-    "next": "16.0.10",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
@@ -54,10 +54,10 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@tanstack/eslint-plugin-query": "^4.32.5",
     "@tanstack/react-query-devtools": "^5.91.1",
-    "baseline-browser-mapping": "^2.9.19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.10"
+    "baseline-browser-mapping": "^2.10.0",
+    "eslint": "^10.0.2",
+    "eslint-config-next": "^0.2.4"
   }
 }
